@@ -80,6 +80,7 @@ subprojects {
                 '-Xlint:-removal',
                 '-Xlint:-unchecked',
                 '-nowarn',
+                '--add-modules', 'jdk.incubator.vector',
                 '-Xmaxerrs', '10000',
                 '-Xmaxwarns', '10000'
         ])
